@@ -57,6 +57,13 @@ touch install-sh mkinstalldirs missing
 aclocal || exit 1
 autoconf || exit 1
 autoheader || exit 1
+test -x $builddir/build/shtool || chmod +x $builddir/build/shtool
+if test ! -x $builddir/build/shtool; then
+  echo "shtool at '$builddir/build/shtool' not executable. "
+  echo "Make sure that the file exists and is executable and then rerun this script. "
+  echo 
+  exit 1
+fi
 libtoolize=`$builddir/build/shtool path glibtoolize libtoolize`
 $libtoolize -f -c || exit 1
 
